# perception_capabilities

./: CMakeLists.txt  README.md  package.xml  plugins.xml
.devcontainer/humble/: Dockerfile  devcontainer.json
.devcontainer/jazzy/: Dockerfile  devcontainer.json
docs/: example_1.md  example_2.md  example_3.md  interface.md
include/fp_perception_capabilities/: ImageAnalysisRunner.hpp  SentimentRunner.hpp  SpeechRunner.hpp  TranscribeRunner.hpp
include/perception_capabilities/: ImageAnalysisRunner.hpp  SentimentRunner.hpp  SpeechRunner.hpp  TranscribeRunner.hpp
interfaces/: ImageAnalysisRunner.yaml  SentimentRunner.yaml  SpeechRunner.yaml  TranscribeRunner.yaml
launch/: system.launch.py
plans/: perception_1.xml  perception_2.xml  perception_3.xml  perception_4.xml  perception_5.xml  perception_6.xml  perception_7.xml
providers/: ImageAnalysisRunner.yaml  SentimentRunner.yaml  SpeechRunner.yaml  TranscribeRunner.yaml
src/: perception_runners.cpp
